rustdocs/errors/rust-bitcoin-units-src-amount-signed.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/amount/signed.rs:7:5
  |
7 | use core::str::FromStr;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/amount/signed.rs:13:5
   |
13 | use super::error::ParseErrorInner;
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/amount/signed.rs:14:5
   |
14 | use super::{
   |     ^^^^^ there are too many leading `super` keywords

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/amount/signed.rs:8:5
  |
8 | use core::{default, fmt};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/units/src/amount/signed.rs:98:5
   |
98 | use internals::const_casts;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 5 + extern crate internals;
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
